stopping point, buggy on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,6 +16,7 @@ $green: #1ff042;
 
 :host{
 	display: block;
+	font-size: 20px;
     // min-height: 100vh;
 	// width: 100%;
 }
@@ -41,6 +42,15 @@ $green: #1ff042;
 		left: 0;
 		opacity: 0;
 		background-color: black;
+		font-size: 20px;
+		border: none;
+    color: transparent;
+    text-shadow: 0 0 0 gray;
+    text-align: center;
+
+    &:focus {
+        outline: none;
+    }
 	}
 }
 
